==> thanhbinh89/flappy-bird/application/sources/networks/mbmaster-v2.9.6/demo/STM32/Port/mbportserial.c <==
#include <stdlib.h>
#include "mbport.h"
#include "common/mbtypes.h"
#include "common/mbportlayer.h"
#include "common/mbframe.h"
#include "common/mbutils.h"
#include "task.h"
#include "sys_io.h"
#define IDX_INVALID				( 255 )
#define UART_BAUDRATE_MIN		( 300 )
#define UART_BAUDRATE_MAX		( 115200 )
#define UART_1_ENABLED          ( 0 )   /*!< Set this to 1 to enable USART1 */
#define UART_2_ENABLED          ( 1 )   /*!< Set this to 1 to enable USART2 */
#define UART_3_ENABLED          ( 0 )   /*!< Set this to 1 to enable USART3 */
#define UART_1_PORT             ( MB_UART_1 )
#define UART_2_PORT             ( MB_UART_2 )
#define UART_3_PORT             ( MB_UART_3 )
#define UART_1_PORT             ( MB_UART_1 )
#define UART_2_PORT             ( MB_UART_2 )
#define UART_1_IDX              ( 0 )
#define UART_2_IDX              ( 1 )
#define NUARTS                  ( 2 )
#define UART_1_PORT             ( MB_UART_1 )
#define UART_1_IDX              ( 0 )
#define NUARTS                  ( 1 )
#define UART_2_PORT             ( MB_UART_2 )
#define UART_2_IDX              ( 0 )
#define NUARTS                  ( 1 )
#define NUARTS                  ( 0 )
#define RS_485_UART_1_INIT(  )	\
do { \
	/* not implemented yet */\
} while( 0 )
#define RS_485_UART_1_ENABLE_TX(  )	\
do {\
    /* not implemented yet */\
} while( 0 )
#define RS_485_UART_1_DISABLE_TX(  ) \
do { \
    /* not implemented yet */ \
} while( 0 )

eMBErrorCode
eMBPSerialInit( xMBPSerialHandle * pxSerialHdl, UCHAR ucPort, ULONG ulBaudRate,
                UCHAR ucDataBits, eMBSerialParity eParity, UCHAR ucStopBits, xMBHandle xMBMHdl )
{
    USART_InitTypeDef USART_InitStructure;
    USART_ClockInitTypeDef USART_ClockInitStructure;
    eMBErrorCode    eStatus = MB_ENOERR;
    UBYTE           ubIdx;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( !bIsInitalized )
    {
        for( ubIdx = 0; ubIdx < MB_UTILS_NARRSIZE( xSerialHdls ); ubIdx++ )
        {
            HDL_RESET( &xSerialHdls[ubIdx] );
        }
#if UART_1_ENABLED == 1
        RS_485_UART_1_INIT(  );
        RS_485_UART_1_DISABLE_TX(  );
#endif
#if UART_2_ENABLED == 1
        RS_485_UART_2_INIT(  );
        RS_485_UART_2_DISABLE_TX(  );
#endif
#if UART_3_ENABLED == 1
        RS_485_UART_3_INIT(  );
        RS_485_UART_3_DISABLE_TX(  );
#endif
        bIsInitalized = TRUE;
    }

    if( ( MB_HDL_INVALID == xMBMHdl ) || ( NULL == pxSerialHdl ) )
    {
        eStatus = MB_EINVAL;
    }
    else
	{
        eStatus = MB_ENORES;

        /* Setup baudrate */
        if( ( ulBaudRate > UART_BAUDRATE_MIN ) && ( ulBaudRate < UART_BAUDRATE_MAX ) )
        {
            USART_InitStructure.USART_BaudRate = ulBaudRate;
        }
        else
        {
            eStatus = MB_EINVAL;
        }

        /* Setup stopbits */
        switch ( ucStopBits )
        {
        case 1:
            USART_InitStructure.USART_StopBits = USART_StopBits_1;
            break;
        case 2:
            USART_InitStructure.USART_StopBits = USART_StopBits_1;
            break;
        default:
            eStatus = MB_EINVAL;
            break;
        }

        /* For STM32 parity is placed on bit 9 (MSB)
         * Select correct number of databits */
        if( ucDataBits == 8 )
        {
            if( eParity != MB_PAR_NONE )
            {
                USART_InitStructure.USART_WordLength = USART_WordLength_9b;
            }
            else
            {
                USART_InitStructure.USART_WordLength = USART_WordLength_8b;
            }
        }
        else
        {
            if( eParity != MB_PAR_NONE )
            {
                USART_InitStructure.USART_WordLength = USART_WordLength_8b;
            }
            else
            {
                eStatus = MB_EINVAL;
            }
        }

        /* Setup parity */
        switch ( eParity )
        {
        case MB_PAR_NONE:
            USART_InitStructure.USART_Parity = USART_Parity_No;
            break;
        case MB_PAR_ODD:
            USART_InitStructure.USART_Parity = USART_Parity_Odd;
            break;
        case MB_PAR_EVEN:
            USART_InitStructure.USART_Parity = USART_Parity_Even;
            break;
        default:
            eStatus = MB_EINVAL;
            break;
        }

        /* Setup flow control */
        USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;

        /* Enable transmit and receive */
        USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

        /* Default other settings. */
        USART_ClockInitStructure.USART_Clock = USART_Clock_Disable;
        USART_ClockInitStructure.USART_CPOL = USART_CPOL_Low;
        USART_ClockInitStructure.USART_CPHA = USART_CPHA_2Edge;
        USART_ClockInitStructure.USART_LastBit = USART_LastBit_Disable;


        if( eStatus != MB_EINVAL )
        {
            switch ( ucPort )
            {
#if UART_1_ENABLED == 1
            case UART_1_PORT:
                if( IDX_INVALID == xSerialHdls[UART_1_IDX].ubIdx )
                {
                    /* Configure  USART1 */
                    USART_Init( USART1, &USART_InitStructure );
                    USART_ClockInit(USART1, &USART_ClockInitStructure);
                    /* Enable the USART1 */
                    USART_Cmd( USART1, ENABLE );
                    /* Disable receive and transmit interrupts from the beginning */
                    USART_ITConfig( USART1, USART_IT_RXNE, DISABLE );
                    USART_ITConfig( USART1, USART_IT_TXE, DISABLE );

                    /* Setup handle to uart */
                    *pxSerialHdl = &xSerialHdls[UART_1_IDX];
                    xSerialHdls[UART_1_IDX].ubIdx = UART_1_IDX;
                    xSerialHdls[UART_1_IDX].xMBMHdl = xMBMHdl;

                    /* Everything is ok */
                    eStatus = MB_ENOERR;
                }
                else
                {
                    eStatus = MB_ENORES;
                }
                break;
#endif
#if UART_2_ENABLED == 1
            case UART_2_PORT:
				if( IDX_INVALID == xSerialHdls[UART_2_IDX].ubIdx )
				{
                    /* Configure STM32 USART2 */
                    USART_Init( USART2, &USART_InitStructure );
					USART_ClockInit(USART2, &USART_ClockInitStructure);
                    /* Enable the USART2 */
                    USART_Cmd( USART2, ENABLE );

                    /* Disable receive and transmit interrupts from the beginning */
                    USART_ITConfig( USART2, USART_IT_RXNE, DISABLE );
                    USART_ITConfig( USART2, USART_IT_TXE, DISABLE );

                    /* Setup handle to uart */
                    *pxSerialHdl = &xSerialHdls[UART_2_IDX];
                    xSerialHdls[UART_2_IDX].ubIdx = UART_2_IDX;
                    xSerialHdls[UART_2_IDX].xMBMHdl = xMBMHdl;

                    /* Every thing is ok */
                    eStatus = MB_ENOERR;
				}
				else
				{
					eStatus = MB_ENORES;
				}
                break;
#endif
#if UART_3_ENABLED == 1
            case UART_3_PORT:
                if( IDX_INVALID == xSerialHdls[UART_3_IDX].ubIdx )
                {
                    /* Configure STM32 USART2 */
                    USART_Init( USART3, &USART_InitStructure );
                    USART_ClockInit(USART3, &USART_ClockInitStructure);
                    /* Enable the USART2 */
                    USART_Cmd( USART3, ENABLE );

                    /* Disable receive and transmit interrupts from the beginning */
                    USART_ITConfig( USART3, USART_IT_RXNE, DISABLE );
                    USART_ITConfig( USART3, USART_IT_TXE, DISABLE );

                    /* Setup handle to uart */
                    *pxSerialHdl = &xSerialHdls[UART_3_IDX];
                    xSerialHdls[UART_3_IDX].ubIdx = UART_3_IDX;
                    xSerialHdls[UART_3_IDX].xMBMHdl = xMBMHdl;

                    /* Every thing is ok */
                    eStatus = MB_ENOERR;
                }
                else
                {
                    eStatus = MB_ENORES;
                }
                break;
#endif

            default:
                break;
            }
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialClose( xMBPSerialHandle xSerialHdl )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        switch ( pxSerialIntHdl->ubIdx )
        {
#if UART_1_ENABLED == 1
        case UART_1_IDX:
            if( ( NULL == pxSerialIntHdl->pbMBMTransmitterEmptyFN ) && ( NULL == pxSerialIntHdl->pvMBMReceiveFN ) )
            {
                /* Close USART 1 */
                USART_Cmd( USART1, DISABLE );
                USART_DeInit( USART1 );
                /* Force RS485 back to receive mode */
                RS_485_UART_1_DISABLE_TX(  );
                /* Reset handle */
                HDL_RESET( pxSerialIntHdl );
                /* No error */
                eStatus = MB_ENOERR;
            }
            else
            {
                eStatus = MB_EIO;
            }
            break;
#endif
#if UART_2_ENABLED == 1
        case UART_2_IDX:
            if( ( NULL == pxSerialIntHdl->pbMBMTransmitterEmptyFN ) && ( NULL == pxSerialIntHdl->pvMBMReceiveFN ) )
            {
                /* Close USART 2 */
                USART_Cmd( USART2, DISABLE );
                USART_DeInit( USART2 );
                /* Force RS485 back to receive mode */
                RS_485_UART_2_DISABLE_TX(  );
                /* Reset handle */
                HDL_RESET( pxSerialIntHdl );
                /* No error */
                eStatus = MB_ENOERR;
            }
            else
            {
                eStatus = MB_EIO;
            }
            break;
#endif
#if UART_3_ENABLED == 1
        case UART_3_IDX:
            if( ( NULL == pxSerialIntHdl->pbMBMTransmitterEmptyFN ) && ( NULL == pxSerialIntHdl->pvMBMReceiveFN ) )
            {
                /* Close USART 3 */
                USART_Cmd( USART3, DISABLE );
                USART_DeInit( USART3 );
                /* Force RS485 back to receive mode */
                RS_485_UART_3_DISABLE_TX(  );
                /* Reset handle */
                HDL_RESET( pxSerialIntHdl );
                /* No error */
                eStatus = MB_ENOERR;
            }
            else
            {
                eStatus = MB_EIO;
            }
            break;
#endif
        default:
            MBP_ASSERT( 0 );
            break;
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialTxEnable( xMBPSerialHandle xSerialHdl, pbMBPSerialTransmitterEmptyCB pbMBMTransmitterEmptyFN )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        eStatus = MB_ENOERR;
        if( NULL != pbMBMTransmitterEmptyFN )
        {
            MBP_ASSERT( NULL == pxSerialIntHdl->pbMBMTransmitterEmptyFN );
            pxSerialIntHdl->pbMBMTransmitterEmptyFN = pbMBMTransmitterEmptyFN;
            switch ( pxSerialIntHdl->ubIdx )
            {
#if UART_1_ENABLED == 1
            case UART_1_IDX:
                /* RS485 transmit mode */
                RS_485_UART_1_ENABLE_TX(  );
                /* Enable USART 1 tx interrupt */
                USART_ITConfig( USART1, USART_IT_TXE, ENABLE );
                break;
#endif
#if UART_2_ENABLED == 1
            case UART_2_IDX:
                /* RS485 transmit mode */
                RS_485_UART_2_ENABLE_TX(  );
                /* Enable USART 2 tx interrupt */
                USART_ITConfig( USART2, USART_IT_TXE, ENABLE );
                break;
#endif
#if UART_3_ENABLED == 1
            case UART_3_IDX:
                /* RS485 transmit mode */
                RS_485_UART_3_ENABLE_TX(  );
                /* Enable USART 3 tx interrupt */
                USART_ITConfig( USART3, USART_IT_TXE, ENABLE );                                
                break;
#endif
            default:
                MBP_ASSERT( 0 );
            }

        }
        else
        {
            pxSerialIntHdl->pbMBMTransmitterEmptyFN = NULL;
            /* The transmitter is disable when the last frame has been sent.
             * This is necessary for RS485 with a half-duplex bus.
             */
            switch ( pxSerialIntHdl->ubIdx )
            {
#if UART_1_ENABLED == 1
            case UART_1_IDX:
                /* Disable transmit register empty interrupt */
                USART_ITConfig( USART1, USART_IT_TXE, DISABLE );
                /* Enable transmit complete interrupt */
                USART_ITConfig( USART1, USART_IT_TC, ENABLE );
                break;
#endif
#if UART_2_ENABLED == 1
            case UART_2_IDX:
                /* Disable transmit register empty interrupt */
                USART_ITConfig( USART2, USART_IT_TXE, DISABLE );
                /* Enable transmit complete interrupt */
                USART_ITConfig( USART2, USART_IT_TC, ENABLE );
                break;
#endif
#if UART_3_ENABLED == 1
            case UART_3_IDX:
                /* Disable transmit register empty interrupt */
                USART_ITConfig( USART3, USART_IT_TXE, DISABLE );
                /* Enable transmit complete interrupt */
                USART_ITConfig( USART3, USART_IT_TC, ENABLE );
                break;
#endif
            default:
                MBP_ASSERT( 0 );
            }
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialRxEnable( xMBPSerialHandle xSerialHdl, pvMBPSerialReceiverCB pvMBMReceiveFN )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        eStatus = MB_ENOERR;
        if( NULL != pvMBMReceiveFN )
        {
            MBP_ASSERT( NULL == pxSerialIntHdl->pvMBMReceiveFN );
            pxSerialIntHdl->pvMBMReceiveFN = pvMBMReceiveFN;
            switch ( pxSerialIntHdl->ubIdx )
            {
#if UART_1_ENABLED == 1
            case UART_1_IDX:
                /* Enable USART 1 receive interrupt */
                USART_ITConfig( USART1, USART_IT_RXNE, ENABLE );
                break;
#endif
#if UART_2_ENABLED == 1
            case UART_2_IDX:
                /* Enable USART 2 receive interrupt */
                USART_ITConfig( USART2, USART_IT_RXNE, ENABLE );
                break;
#endif
#if UART_3_ENABLED == 1
            case UART_3_IDX:
                /* Enable USART 3 receive interrupt */
                USART_ITConfig( USART3, USART_IT_RXNE, ENABLE );
                break;
#endif
            default:
                MBP_ASSERT( 0 );
            }
        }
        else
        {
            pxSerialIntHdl->pvMBMReceiveFN = NULL;
            switch ( pxSerialIntHdl->ubIdx )
            {
#if UART_1_ENABLED == 1
            case UART_1_IDX:
                /* Disable USART 1 receive interrupt */
                USART_ITConfig( USART1, USART_IT_RXNE, DISABLE );
                break;
#endif
#if UART_2_ENABLED == 1
            case UART_2_IDX:
                /* Disable USART 2 receive interrupt */
                USART_ITConfig( USART2, USART_IT_RXNE, DISABLE );
                break;
#endif
#if UART_3_ENABLED == 1
            case UART_3_IDX:
                /* Disable USART 3 receive interrupt */
                USART_ITConfig( USART3, USART_IT_RXNE, DISABLE );
                break;
#endif
            default:
                MBP_ASSERT( 0 );
            }
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}
